25-first-k8s/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  ports:
    - port: 9999
      protocol: TCP
      targetPort: 3000
  selector:
    app: demo
