25-first-k8s/example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 9999
# ToDo: Ingress Controll nicht startklar, noch einmal aufgreifen nächste Woche
